@@ -1,3 +1,10 @@
+Wed Oct 15 16:05:46 2003  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
+
+	* src/dir.c (scan_dir): Don't reduce path to basename before
+ 	calling issrcfile.
+	(issrcfile): Use either basename or full path, as necessary for
+ 	the individual tests.  Reorganized to reduce nesting.
+
 Mon Sep 15 12:34:46 2003  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
 	* src/egrep.y (yylex, member, egrep, cgotofn): Reindented.  Fixed
